[gd_scene load_steps=3 format=3 uid="uid://dkabrjh8phksx"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_it0pd"]
[ext_resource type="PackedScene" uid="uid://drq8v8a5opngh" path="res://Escenas/UI/ColectionUI.tscn" id="2_8ka6j"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_it0pd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 645.0

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0

[node name="Botones" type="PanelContainer" parent="MainPanel"]
layout_mode = 2
offset_left = 433.0
offset_top = 181.0
offset_right = 677.0
offset_bottom = 347.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/Botones"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Button" type="Button" parent="MainPanel/Botones/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Comenzar Partida"

[node name="Button2" type="Button" parent="MainPanel/Botones/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Colecci√≥n
"

[node name="Button" type="Button" parent="MainPanel"]
layout_mode = 0
offset_left = 44.0
offset_top = 42.0
offset_right = 187.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 30
text = "Opciones
"

[node name="CollectionPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0

[node name="ColectionUI" parent="CollectionPanel" instance=ExtResource("2_8ka6j")]
layout_mode = 1

[connection signal="pressed" from="MainPanel/Botones/VBoxContainer/Button" to="." method="start_game"]
[connection signal="pressed" from="MainPanel/Botones/VBoxContainer/Button2" to="." method="show_colection_UI"]
